First commit for cue  dawg

--- a/resources/scss/sections/_all.scss
+++ b/resources/scss/sections/_all.scss
@@ -1,4 +1,4 @@
-@import "expired";
-@import "footer";
+@import "about";
+@import "contact";
 @import "header";
-@import "rating";
+@import "services";
