First commit for cue  dawg

--- a/resources/scss/sections/_all.scss
+++ b/resources/scss/sections/_all.scss
@@ -1,4 +1,4 @@
-@import "about";
-@import "contact";
+@import "expired";
+@import "footer";
 @import "header";
-@import "services";
+@import "rating";
